--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <script src="/js/lib/angular-route.js"></script>
   <script src="/js/lib/satellizer.js"></script>
   <script src="/js/app.js"></script>
+  <script src="/js/controllers/home.js"></script>
   <script src="/js/controllers/contact.js"></script>
   <script src="/js/controllers/forgot.js"></script>
   <script src="/js/controllers/header.js"></script>
@@ -28,6 +29,7 @@
   <script src="/js/controllers/signup.js"></script>
   <script src="/js/services/account.js"></script>
   <script src="/js/services/contact.js"></script>
+  <script src="/js/services/poll.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
