--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
   <script src="/js/lib/satellizer.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/controllers/home.js"></script>
+  <script src="/js/controllers/createPoll.js"></script>
+  <script src="/js/controllers/myPolls.js"></script>
   <script src="/js/controllers/contact.js"></script>
   <script src="/js/controllers/forgot.js"></script>
   <script src="/js/controllers/header.js"></script>
