--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <script src="/js/app.js"></script>
   <script src="/js/controllers/home.js"></script>
   <script src="/js/controllers/createPoll.js"></script>
+  <script src="/js/controllers/viewPoll.js"></script>
   <script src="/js/controllers/myPolls.js"></script>
   <script src="/js/controllers/contact.js"></script>
   <script src="/js/controllers/forgot.js"></script>
