--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   <script src="/js/services/account.js"></script>
   <script src="/js/services/contact.js"></script>
   <script src="/js/services/poll.js"></script>
+  <script src="/js/services/vote.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
