Add voting functionality.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <div ng-view></div>
   <div ng-include src="'partials/footer.html'"></div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/async/2.5.0/async.min.js"></script>
   <script src="/js/lib/jquery.js"></script>
   <script src="/js/lib/foundation.js"></script>
   <script src="/js/lib/angular.js"></script>
