Implement service to store current user information instead of $rootScope.

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,6 @@
   <script src="/js/controllers/viewPoll.js"></script>
   <script src="/js/controllers/editPoll.js"></script>
   <script src="/js/controllers/myPolls.js"></script>
-  <script src="/js/controllers/contact.js"></script>
   <script src="/js/controllers/forgot.js"></script>
   <script src="/js/controllers/header.js"></script>
   <script src="/js/controllers/login.js"></script>
@@ -33,7 +32,7 @@
   <script src="/js/controllers/reset.js"></script>
   <script src="/js/controllers/signup.js"></script>
   <script src="/js/services/account.js"></script>
-  <script src="/js/services/contact.js"></script>
+  <script src="/js/services/user.js"></script>
   <script src="/js/services/poll.js"></script>
   <script src="/js/services/vote.js"></script>
 
