Add user view and controller.

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <script src="/js/controllers/editPoll.js"></script>
   <script src="/js/controllers/myPolls.js"></script>
   <script src="/js/controllers/myVotes.js"></script>
+  <script src="/js/controllers/user.js"></script>
   <script src="/js/controllers/forgot.js"></script>
   <script src="/js/controllers/header.js"></script>
   <script src="/js/controllers/login.js"></script>
