--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <script src="/js/lib/angular-route.js"></script>
   <script src="/js/lib/satellizer.js"></script>
   <script src="/js/app.js"></script>
+  <script src="/js/directives/loading.js"></script>
   <script src="/js/controllers/home.js"></script>
   <script src="/js/controllers/createPoll.js"></script>
   <script src="/js/controllers/viewPoll.js"></script>
