--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Votapalooza</title>
+  <title>Voty</title>
   <link rel="stylesheet" href="/css/main.css">
 </head>
-<body ng-app="Votapalooza">
+<body ng-app="Voty">
   <div ng-include src="'partials/header.html'"></div>
   <div ng-view></div>
   <div ng-include src="'partials/footer.html'"></div>
