--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <title>Voty</title>
   <link rel="stylesheet" href="/css/main.css">
 </head>
-<body ng-app="Fantasy Verdict">
+<body ng-app="Voty">
   <div ng-include src="'partials/header.html'"></div>
   <div ng-view></div>
   <div ng-include src="'partials/footer.html'"></div>
